--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ a {
     font-size: 2.8rem;
     margin-bottom: 20px;
     font-weight: 600;
-    color: #fff;
+    color: #000;
     text-transform: uppercase;
     letter-spacing: 2px;
 }
