--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ a {
 #resume h3 {
     font-size: 22px;
     margin-top: 20px;
-    color: #3e1b41; /* Darker pink for job titles */
+    color: #000; /* Darker pink for job titles */
     text-align: left;
     position: relative;
     font-weight: 600;
